--- a/views/home.ejs
+++ b/views/home.ejs
@@ -45,7 +45,7 @@
     <div class="container-fluid padding">
       <div class="row padding">
         <div class="col-lg-6">
-          <h2>If you build it...</h2>
+          <h2>If you build it (GDP)...</h2>
 
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus
