--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,96 +1,92 @@
   <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
-    <footer>
-      <section class="section-1">
-        <section class="about">
-          <h2>About</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
-            dolor reprehenderit asperiores commodi iusto? Blanditiis voluptatum
-            ex non molestiae nemo illo, ullam mollitia ad dignissimos. Quo
-            consectetur adipisci voluptates nisi amet maiores excepturi magni,
-            voluptatibus nam. Reprehenderit fugit deserunt optio expedita modi,
-            quos animi eaque repudiandae impedit placeat non nulla?
-          </p>
-        </section>
+  <!-- footer of our page -->
+  <footer>
 
-        <section class="categories">
-          <h1>Categories</h1>
-          <ul>
-            <li><a href="#">JavaScript</a></li>
-            <li><a href="#">Node JS</a></li>
-            <li><a href="#">UI Design</a></li>
-            <li><a href="#">Java</a></li>
-            <li><a href="#">Python</a></li>
-          </ul>
-        </section>
+    <!-- Section 1 -->
+    <section class="section-1">
 
-        <section class="quicklinks">
-          <h1>Quick Links</h1>
-          <ul>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Sitemap</a></li>
-            <li><a href="#">Disclamier</a></li>
-          </ul>
-        </section>
-
-        <section class="contact">
-          <h1>Contact Us</h1>
-          <ul>
-            <li>
-              <i class="fa fa-home"></i>
-              <p>SCO-75, Chandigarh, India</p>
-            </li>
-            <li>
-              <i class="fa fa-envelope-square"></i>
-              <p>...@gmail.com</p>
-            </li>
-            <li>
-              <i class="fa fa-phone-square"></i>
-              <p>01111111111</p>
-            </li>
-            <li>
-              <i class="fa fa-facebook-square"></i>
-              <p>fb@1</p>
-            </li>
-          </ul>
-        </section>
+      <!-- Section 1 part1 -->
+      <section class="about">
+        <h2>About</h2>
+        <p>K-labs code wnats to be simple is an initiative to help
+          the upcoming programmers with tge code. K-Labs focuses on providing
+          the most efficient code or snippets as the code wants to be simple. We will help programmers to build up concepts in different programmming
+          languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Alogrithm.</p>
       </section>
 
-      <hr width="100%" noshade />
-      <section class="section-2">
-        <p>Register for Free</p>
-        <a href="">signup!</a>
-      </section>
-
-      <hr width="100%" noshade />
-      <section class="section-3">
+      <!-- Section 1 part2 -->
+      <section class="links1">
+        <h2>Categories</h2>
         <ul>
-          <li>
-            <a href="#"><i class="fa fa-facebook-square"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-twitter-square"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-google-plus-square"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-linkedin-square"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-github-square"></i></a>
-          </li>
+          <li><a href="#">C</a></li>
+          <li><a href="#">UI Desining</a></li>
+          <li><a href="#">PHP</a></li>
+          <li><a href="#">Java</a></li>
+          <li><a href="#">Android</a></li>
+          <li><a href="#">Hybrid Apps</a></li>
         </ul>
       </section>
 
-      <section class="section-4">
-        <p>Copyright &copy; 2020 All Rights Reserved.</p>
+      <!-- Section 1 part3 -->
+      <section class="links2">
+        <h2>Quick Links</h2>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Contribute</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Sitemap</a></li>
+          <li><a href="#">Disclaimer</a></li>
+        </ul>
       </section>
-    </footer>
+
+      <!-- Section 4 part4 -->
+      <section class="links3">
+        <h2>Contact us</h2>
+        <ul>
+          <li><i class="fa fa-home"></i><span>SCO-75, Chandigarh, India</span></li>
+          <li><i class="fa fa-envelope"></i> <span>KlabsIndia@gmail.com</span></li>
+          <li><i class="fa fa-phone-square"></i> <span>Mobile: 1234567894</span></li>
+          <li><i class="fa fa-facebook-official"></i> <span><a href="#">KLabsIndiaCo.</a></span></li>
+        </ul>
+      </section>
+    </section>
+
+    <!-- Horizontal line -->
+    <hr width="100%">
+
+    <!-- Section 2 -->
+    <section class="section-2">
+      <h2>Register For Free</h2>
+      <a href="#">SignUp!</a>
+    </section>
+
+    <!-- Horizontal line -->
+    <hr width="100%">
+
+    <!-- Section 3 -->
+    <section class="section-3">
+      <ul>
+        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fa fa-google"></i></a></li>
+        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+
+      </ul>
+
+    </section>
+
+    <!-- Horizontal line -->
+    <hr width="100%">
+
+    <!-- Section 4 -->
+    <section class="section-4">
+      <p>Copyright @ 2020 All Rights Reserved by <a href="practical9.html">Our Team</a></p>
+    </section>
+  </footer>
