--- a/views/header.ejs
+++ b/views/header.ejs
@@ -16,7 +16,7 @@
 
 <body>
   <section id="navigation">
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+    <nav class="navbar navbar-expand-md navbar-dark sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="/images/logo.jpeg">
         </a>
