--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -221,6 +221,10 @@ h4 {
 }
 
 /* navigation */
+#navigation {
+  background-color: #394867;
+}
+
 #navigation .navbar {
   padding: 1.1rem;
 }
@@ -258,9 +262,27 @@ h4 {
   height: 300px;
 }
 
+#meet-team {
+  padding: 7%;
+}
+
+#meet-team .heros {
+  padding-bottom: 3%;
+}
+
+#meet-team img {
+  width: 100%;
+  height: 275px;
+}
+
 /* detailed */
 #detailed {
   background-color: burlywood;
+  padding: 7%;
+}
+
+#detailed .cards {
+  padding: 0 0 5%;
 }
 
 #detailed .card {
